<resources>
    <string name="app_name">MyMovieNew</string>
    <string name="title">Movie Title</string>
    <string name="genre">Genre</string>
    <string name="year">Year</string>
    <string name="rating">Rating</string>
    <string name="insert">INSERT</string>
    <string name="show">SHOW LIST</string>

    <string-array name="Rating_List">
        <item>G</item>
        <item>PG</item>
        <item>PG13</item>
        <item>NC16</item>
        <item>M18</item>
        <item>R21</item>
    </string-array>
</resources>